--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "gulp-watch": "^4.3.11",
     "imagemin-pngquant": "^5.0.0",
     "require-dir": "^0.3.1"
+  },
+  "dependencies": {
+    "bootstrap": "^4.0.0-alpha.6",
+    "font-awesome": "^4.7.0"
   }
 }
